--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .btn {
   outline: none;
   border: 0;
-  background: darkblue;
+  background: orange;
   color: white;
   padding: 5px 10px;
   border: 1px solid black;
